fix(core): fix surrounding text being selected when dragging scrollbar on Firefox

--- a/packages/simplebar-core/src/simplebar.css
+++ b/packages/simplebar-core/src/simplebar.css
@@ -120,10 +120,24 @@
   overflow: hidden;
 }
 
+[data-simplebar].simplebar-dragging {
+  pointer-events: none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 [data-simplebar].simplebar-dragging .simplebar-content {
   pointer-events: none;
-  user-select: none;
+  -webkit-touch-callout: none;
   -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 [data-simplebar].simplebar-dragging .simplebar-track {
